# storage/storage.go
@@ -7,8 +7,28 @@ import (
 
 type StorageI interface {
 	CloseDB()
+	Branch() BranchRepoI
+	Client() ClientRepoI
+	Order() OrderRepoI
 	Product() ProductRepoI
 	Category() CategoryRepoI
+	User() UserRepoI
+}
+
+type BranchRepoI interface {
+	Create(ctx context.Context, req *models.CreateBranch) (string, error)
+	GetByID(ctx context.Context, req *models.BranchPrimeryKey) (*models.Branch, error)
+}
+
+type ClientRepoI interface {
+	Create(ctx context.Context, req *models.CreateClient) (string, error)
+	GetByID(ctx context.Context, req *models.ClientPrimeryKey) (*models.Client, error)
+}
+
+type OrderRepoI interface {
+	Create(ctx context.Context, req *models.CreateOrder) (string, error)
+	CreateBucket(ctx context.Context, req *models.CreateBucket) (string, error)
+	GetBucketByClientID(ctx context.Context, req *models.GetBucketByClientID) (*models.GetBucketByClientResponse, error)
 }
 
 type ProductRepoI interface {
@@ -25,4 +45,13 @@ type CategoryRepoI interface {
 	GetList(ctx context.Context, req *models.GetListCategoryRequest) (*models.GetListCategoryResponse, error)
 	Update(ctx context.Context, category *models.UpdateCategory) error
 	Delete(ctx context.Context, req *models.CategoryPrimeryKey) error
+}
+
+type UserRepoI interface {
+	Insert(context.Context, *models.CreateUser) (string, error)
+	GetByID(context.Context, *models.UserPrimeryKey) (*models.User, error)
+	GetList(ctx context.Context, req *models.GetListUserRequest) (*models.GetListUserResponse, error)
+	Update(ctx context.Context, praduct *models.UpdateUser) error
+	Delete(ctx context.Context, req *models.UserPrimeryKey) error
+	CheckUser(ctx context.Context, req *models.Login) (bool, error)
 }
